Comments'API fixing + Swagger page
